--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -26,10 +26,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/arima_madurai_extrabold"
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textColor="#000000"
-                android:textSize="70sp" />
+                android:textSize="50sp" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -39,61 +40,102 @@
                 app:srcCompat="@drawable/logo" />
 
             <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30sp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/descricaoApp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16sp"
-                android:text="Conteúdo em Texto"
+                android:fontFamily="@font/arima_madurai_extrabold"
+                android:text="TextView"
                 android:textAlignment="center"
-                android:textSize="40sp" />
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="19sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnTextos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#8C0202"
-                android:text="Button" />
+                android:layout_marginTop="16sp"
+                android:background="#FF0000"
+                android:backgroundTint="#7C0000"
+                android:fontFamily="@font/arima_madurai_extrabold"
+                android:text="@string/btn_conteudo"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/conteudo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16sp"
-                android:text="TextView"
+                android:layout_marginTop="3sp"
+                android:background="#E8ABAB"
+                android:text="Conteúdo em Texto"
                 android:textAlignment="center"
-                android:textSize="40sp" />
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnContato"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#E4CE04"
-                android:text="Button" />
+                android:layout_marginTop="16sp"
+                android:background="#E4AC04"
+                android:backgroundTint="#D8AA22"
+                android:fontFamily="@font/arima_madurai_extrabold"
+                android:text="@string/btn_contato"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/contato"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16sp"
+                android:layout_marginTop="3sp"
+                android:background="#E4CC75"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textSize="40sp" />
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnSobre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#045BA1"
-                android:text="Button" />
+                android:layout_marginTop="16sp"
+                android:background="#045BA1"
+                android:backgroundTint="#3732BF"
+                android:fontFamily="@font/arima_madurai_extrabold"
+                android:text="@string/btn_sobre"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sobre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3sp"
+                android:background="#B0D2ED"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16sp"
+                android:text="TCC_Mauricio_Victor"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
