Apresentação da pop-up com dados adicionais das contas.

--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -13,7 +13,6 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:text="1"
         android:textSize="12sp"/>
 
     <TextView
@@ -23,7 +22,6 @@
         android:layout_marginTop="35dp"
         android:layout_marginLeft="20dp"
         android:layout_alignParentLeft="true"
-        android:text="2"
         android:textSize="12sp"/>
 
     <TextView
@@ -33,7 +31,6 @@
         android:layout_marginTop="60dp"
         android:layout_marginLeft="20dp"
         android:layout_alignParentLeft="true"
-        android:text="3"
         android:textSize="12sp"/>
 
     <TextView
@@ -43,7 +40,6 @@
         android:layout_marginTop="85dp"
         android:layout_marginLeft="20dp"
         android:layout_alignParentLeft="true"
-        android:text="4"
         android:textSize="12sp"/>
 
     <TextView
@@ -53,7 +49,42 @@
         android:layout_marginTop="110dp"
         android:layout_marginLeft="20dp"
         android:layout_alignParentLeft="true"
-        android:text="5"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/popup_details6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="135dp"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentLeft="true"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/popup_details7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentLeft="true"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/popup_details8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentLeft="true"
+        android:textSize="12sp"/>
+
+    <TextView
+        android:id="@+id/popup_details9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="205dp"
+        android:layout_marginLeft="20dp"
+        android:layout_alignParentLeft="true"
         android:textSize="12sp"/>
 
 </RelativeLayout>
